finished stylin cart

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,3 +1,20 @@
 .cart {
   background: white;
+  border: 2px solid blue;
+  display: grid;
+  grid-template-areas:
+    "search search"
+    "grocery basket";
+}
+
+.search {
+  grid-area: search;
+} 
+
+.grocery {
+  grid-area: grocery;
+}
+
+.basket {
+  grid-area: basket;
 }
