made css responsive

--- a/src/components/Cart/BasketList/BasketItem/BasketItem.css
+++ b/src/components/Cart/BasketList/BasketItem/BasketItem.css
@@ -1,13 +1,12 @@
 .basketItem {
   display: flex;
-  border: 2px solid black;
   justify-content: flex-start;
   flex-wrap: wrap;
   align-items: center;
-  /* background: #efefef; */
-  /* background: #fff; */
+  padding:1px;
   text-align: center;
-  margin: 1%;
+  margin: 1% 0% 1% 0%;  
+  width: 48%;
 }
 
 .bbutton {
@@ -34,5 +33,7 @@
 @media only screen and (max-width: 600px) {
   .basketItem {
     align-items: center;
+    width: 100%;
+    padding: 0;
   }
 }
