--- a/src/components/Cart/GroceryList/GroceryList.css
+++ b/src/components/Cart/GroceryList/GroceryList.css
@@ -1,7 +1,19 @@
 .glist {
-  border: 2px solid black;
   display: flex;
-  flex-direction: column; 
-  padding: 2%;
+  flex-direction: column;
+  padding: 5%;
+  align-items: center;
 }
 
+.gListItems {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .glist {
+    padding: 1px;
+  }
+}
